# pxe-server

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: flake-check.yaml
.zed/: settings.json
crates/dhcp/: Cargo.toml
crates/dhcp/src/: lib.rs  packet.rs  server.rs  tests.rs
crates/proxy-dhcp/: Cargo.toml
crates/proxy-dhcp/src/: lib.rs  server.rs  tests.rs
crates/pxe-server/: Cargo.toml
crates/pxe-server/src/: lib.rs  main.rs
crates/pxe-server/src/util/: get_interface_ip.rs  mod.rs
crates/pxe-server/tests/: integration_test.rs
crates/tftp/: Cargo.toml
crates/tftp/src/: lib.rs  protocol.rs  server.rs  transfer.rs
src/: lib.rs  main.rs
src/dhcp/: packet.rs  server.rs  tests.rs
src/proxy_dhcp/: server.rs  tests.rs
src/tftp/: mod.rs  protocol.rs  server.rs  transfer.rs
tests/: integration_test.rs
tftp_root/: test.txt
