[package]
name = "pxe-server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
strip = true

[dependencies]
anyhow = "1"
argh = "0.1.13"
nix = { version = "0.30", default-features = false, features = ["net"] }
socket2 = "0.6.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
