[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
argh = "0.1.13"
nix = { version = "0.30", default-features = false, features = ["net"] }
socket2 = "0.6.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"

[workspace.metadata.crane]
name = "pxe-server"

[workspace.package]
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
